# el_shop

./: .coverage  README.md  main.py  pyproject.toml
classes/: InstantiateCSVError.py  item.py  keyboard.py  phone.py
tests/: items.csv  test_item.py  test_keyboard.py  test_main.py  test_phone.py
