[tool.poetry]
name = "el-shop"
version = "0.1.0"
description = ""
authors = ["Alexei <prog_alexei@mail.ru>"]
readme = "README.md"
packages = [{include = "el_shop"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
